recursion.lessons.recursion.koch.Koch.scala.error
Koch:15: error: not found: value legth
		snowSide(levels-1,legth/3)
                                  ^Koch:17: error: not found: value legth
		snowSide(levels-1,legth/3)
                                  ^Koch:19: error: not found: value legth
		snowSide(levels-1,legth/3)
                                  ^